* Renamed the Jump menu item to the Go to line menu item. * Created the GoToLineCommand that open the GoToLine Dialog Window. If the user pressed the Go to button on the Dialog Window, that the cursor will be move to the line specified by the user.   * Binded this command to the Go to line menu item.   * Injected necessary dependencies into the MainWindow View Model.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -103,7 +103,7 @@
                     <MenuItem Header="_Search"/>
                     <MenuItem Header="_FindNext"/>
                     <MenuItem Header="_Replace"/>
-                    <MenuItem Header="_Jump"/>
+                    <MenuItem Header="_Go to line" Command="{Binding GoToLineCommand}"/>
                     <Separator/>
                     <MenuItem Header="_Select All" Command="ApplicationCommands.SelectAll"/>
                     <MenuItem Header="_Time/ Date" InputGestureText="F5" Command="{Binding PutDateTimeTextCommand}"/>
