* Created the FindWindow. This window will be contains the find operations in the input text box.   * This window is not finished yet. Now I have only implemented the xaml part.   * Created the necessary ViewModel for window. It is an empty view model yet.   * Created the necessary delegate for the "find next" callback method.   * Created the necessary dialog wrapper class with interface. This interface has two public method (show method, and the callback delegate). This is just a rudimentary phase, but the show method is working.   * Registered this dialog with necessary dependencies in the Service Collection. * Created a FindCommand in the main window view model, and binded this command with the Find Menu Item in the MainWindow.xaml.   * This command displays the find dialog.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -100,7 +100,7 @@
                     <MenuItem Header="_Paste" Command="ApplicationCommands.Paste"/>
                     <MenuItem Header="_Delete" InputGestureText="Del" Command="{Binding DeleteTextCommand}"/>
                     <Separator/>
-                    <MenuItem Header="_Search"/>
+                    <MenuItem Header="_Find" Command="{Binding FindCommand}"/>
                     <MenuItem Header="_FindNext"/>
                     <MenuItem Header="_Replace"/>
                     <MenuItem Header="_Go to line" Command="{Binding GoToLineCommand}"/>
