* Added FindWhat property to FindWindowViewModel and binded this property with FindWhat input text box. * Created the FindWindowViewModelValidator and implemented the validation rules for the FindWith property.   * Registered this validator in the DI Container and in the FindWindowViewModel.

--- a/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
+++ b/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
@@ -115,6 +115,7 @@
                     </Label>
 
                     <TextBox Grid.Row="0" Grid.Column="1" Height="23" Padding="2" Margin="5,5,0,0" Width="190" HorizontalAlignment="Left"
+                             Text="{Binding FindWhat, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              Style="{DynamicResource ToolTipErrorMessageStyle}">
                     </TextBox>
                 </Grid>
