--- a/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
+++ b/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
@@ -156,7 +156,8 @@
                         <TextBlock HorizontalAlignment="Center"><Underline>F</Underline>ind next</TextBlock>
                     </Button.Content>
                 </Button>
-                <Button Content="Cancel" Width="70" Height="23" Margin="5,5,5,5"/>
+                <Button Content="Cancel" Width="70" Height="23" Margin="5,5,5,5" Command="{Binding CancelCommand}" 
+                        CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"/>
             </StackPanel>
         </DockPanel>
     </Grid>
