* Set the Topmost property value in the FindWindow.xaml file. * Created the WindowSettingsViewModel for the MainWindow. This ViewModel wrapped the following properties: Title, Activated.   * Added the new ViewModel for the DI container, and injected this the MainWindow.   * Changed the necessary Window.Title references. * Created the ActivatedBehavior for the window activated property.   * Defined this behavior in the MainWindow.xaml. * Added new logics for the FindNextCommand. If the command is executed, the first step is to make the activated property active in MainWindow.

--- a/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
+++ b/Application.Client.Dialogs/FindDialog/Windows/FindWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:enumConverters="clr-namespace:Application.Client.Converters.EnumConverters;assembly=Application.Client.Converters"
         mc:Ignorable="d" 
         Height="140" Width="370"
-        ResizeMode="NoResize" Title="Find">
+        ResizeMode="NoResize" Title="Find"
+        Topmost="{Binding Source={x:Static Application.Current}, Path=MainWindow.IsActive, Mode=OneWay}">
     <Window.Resources>
         <Style x:Key="ToolTipErrorMessageStyle" TargetType="TextBox">
             <Style.Triggers>
