* Implemented the FindNextCommand business logic in the FindNextCommand class. * Added the FindNextCommand to the Find Next menu item. * Refresh the input fields when the reopen the Find Dialog Window.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -105,7 +105,7 @@
                     <MenuItem Header="_Delete" InputGestureText="Del" Command="{Binding DeleteTextCommand}"/>
                     <Separator/>
                     <MenuItem Header="_Find" Command="{Binding FindCommand}"/>
-                    <MenuItem Header="_FindNext"/>
+                    <MenuItem Header="_Find Next" Command="{Binding FindNextCommand}"/>
                     <MenuItem Header="_Replace"/>
                     <MenuItem Header="_Go to line" Command="{Binding GoToLineCommand}"/>
                     <Separator/>
