* Created ReplaceCommand in the Main/Commands/EditMenu, and binded this command with the Replace MenuItem.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -106,7 +106,7 @@
                     <Separator/>
                     <MenuItem Header="_Find" Command="{Binding FindCommand}"/>
                     <MenuItem Header="_Find Next" Command="{Binding FindNextCommand}"/>
-                    <MenuItem Header="_Replace"/>
+                    <MenuItem Header="_Replace" Command="{Binding ReplaceCommand}"/>
                     <MenuItem Header="_Go to line" Command="{Binding GoToLineCommand}"/>
                     <Separator/>
                     <MenuItem Header="_Select All" Command="ApplicationCommands.SelectAll"/>
