* Created LineIndex and ColumnIndex DependencyPropertyBehaviors for TextBox and refactored the StatusBar Ln and Col value calculation.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -128,7 +128,7 @@
                         <Grid HorizontalAlignment="Right">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="185" />
+                                <ColumnDefinition Width="125" />
                             </Grid.ColumnDefinitions>
                         </Grid>
                     </ItemsPanelTemplate>
@@ -136,11 +136,11 @@
                 <Separator Grid.Column="0" Background="#FFD7D7D7" />
                 <StatusBarItem Grid.Column="1">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Length:" Margin="8 0 4 0"></TextBlock>
-                        <TextBlock Text="{Binding StatusBarViewModel.Length}"></TextBlock>
+                        <TextBlock Text="Ln:" Margin="8 0 4 0"></TextBlock>
+                        <TextBlock Text="{Binding StatusBarViewModel.Ln}"></TextBlock>
                         <TextBlock Margin="2 0 10 0">,</TextBlock>
-                        <TextBlock Text="Lines:" Margin="0 0 4 0"></TextBlock>
-                        <TextBlock Text="{Binding StatusBarViewModel.Lines}"></TextBlock>
+                        <TextBlock Text="Col:" Margin="0 0 4 0"></TextBlock>
+                        <TextBlock Text="{Binding StatusBarViewModel.Col}"></TextBlock>
                     </StackPanel>
                 </StatusBarItem>
             </StatusBar>
@@ -160,6 +160,8 @@
                      Background="{Binding InputTextBoxViewModel.Background, Mode=OneWay}"
                      textBoxBehaviors:SelectedTextBehavior.SelectedText="{Binding InputTextBoxViewModel.SelectedText}"
                      textBoxBehaviors:CaretIndexBehavior.CaretIndex="{Binding InputTextBoxViewModel.CaretIndex}"
+                     textBoxBehaviors:LineIndexBehavior.LineIndex="{Binding InputTextBoxViewModel.LineIndex, UpdateSourceTrigger=PropertyChanged}"
+                     textBoxBehaviors:ColumnIndexBehavior.ColumnIndex="{Binding InputTextBoxViewModel.ColumnIndex}"
                      textBoxBehaviors:SelectionLengthBehavior.SelectionLength="{Binding InputTextBoxViewModel.SelectionLength}">
             </TextBox>
         </DockPanel>
