* Created About window. * Created new Help menu with About menu item. If the user clicked this menu item then the About Window is showing.

--- a/Application.Client/Windows/Main/MainWindow.xaml
+++ b/Application.Client/Windows/Main/MainWindow.xaml
@@ -121,6 +121,9 @@
                 <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="View">
                     <MenuItem Header="_Status bar" IsCheckable="True" IsChecked="True" Command="{Binding ChangeStatusBarVisibilityCommand}"/>
                 </MenuItem>
+                <MenuItem Template="{DynamicResource MainMenuItemControlTemplate}" Header="Help">
+                    <MenuItem Header="_About" Command="{Binding AboutCommand}"/>
+                </MenuItem>
             </Menu>
             <StatusBar DockPanel.Dock="Bottom" Visibility="{Binding StatusBarViewModel.Visibility}">
                 <StatusBar.ItemsPanel>
